RESOLVED FIXED272239
REGRESSION [ iOS ] 5X TestWebKitAPI.CopyRTF.Strips are crashing and failing
https://bugs.webkit.org/show_bug.cgi?id=272239
Summary REGRESSION [ iOS ] 5X TestWebKitAPI.CopyRTF.Strips are crashing and failing
Jay Stfleur
Reported 2024-04-05 12:11:05 PDT
Description: TestWebKitAPI.CopyRTF.StripsUserSelectNoneQuirks TestWebKitAPI.CopyRTF.StripsUserSelectNone TestWebKitAPI.CopyRTF.StripsDefaultTextColorOfLightContent TestWebKitAPI.CopyRTF.StripsDefaultTextColorOfDarkContent TestWebKitAPI.CopyRTF.StripsDataDetectorsLinks all 5 time test are crashing and 3 are failing and appears to have regressed on SDK 21E167. First crash happened on 271908@main and last passed was on 271914@main on SDK 21E166 Diff/Image Diff/Crash Log: TestWebKitAPI.CopyRTF.StripsUserSelectNoneQuirks TestWebKitAPI.CopyRTF.StripsUserSelectNone /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator17.4.sdk/usr/include/c++/v1/string:939: assertion __s != nullptr failed: basic_string(const char*) detected nullptr Child process terminated with signal 6: Abort trap Diff/Image Diff/Crash Log: TestWebKitAPI.CopyRTF.StripsDefaultTextColorOfLightContent TestWebKitAPI.CopyRTF.StripsDefaultTextColorOfDarkContent TestWebKitAPI.CopyRTF.StripsDataDetectorsLinks /Volumes/Data/worker/Apple-iOS-17-Simulator-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/CopyRTF.mm:73Value of: rtfData Actual: falseExpected: true/Volumes/Data/worker/Apple-iOS-17-Simulator-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/CopyRTF.mm:76Value of: attributedString.get() Actual: falseExpected: true/Volumes/Data/worker/Apple-iOS-17-Simulator-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/CopyRTF.mm:140Expected equality of these values: i Which is: 0 3UL Which is: 3 History: https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.CopyRTF.StripsUserSelectNoneQuirks&test=TestWebKitAPI.CopyRTF.StripsUserSelectNone&test=TestWebKitAPI.CopyRTF.StripsDefaultTextColorOfLightContent&test=TestWebKitAPI.CopyRTF.StripsDefaultTextColorOfDarkContent&test=TestWebKitAPI.CopyRTF.StripsDataDetectorsLinks&platform=ios
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-05 12:11:35 PDT
Ryosuke Niwa
Comment 2 2024-04-15 13:08:20 PDT
EWS
Comment 3 2024-04-15 22:19:58 PDT
Committed 277530@main (8df4906592e1): <https://commits.webkit.org/277530@main> Reviewed commits have been landed. Closing PR #27279 and removing active labels.
WebKit Commit Bot
Comment 4 2024-04-16 15:00:22 PDT
Re-opened since this is blocked by bug 272784
Ryosuke Niwa
Comment 5 2024-04-17 17:10:16 PDT
Ryosuke Niwa
Comment 6 2024-04-17 17:36:08 PDT
EWS
Comment 7 2024-04-18 00:33:29 PDT
Committed 277655@main (57b120b52e94): <https://commits.webkit.org/277655@main> Reviewed commits have been landed. Closing PR #27423 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.