REGRESSION [ iOS ] 5X TestWebKitAPI.CopyRTF.Strips are crashing and failing https://bugs.webkit.org/show_bug.cgi?id=272239

Reviewed by Wenson Hsieh.

The test failures are caused because nsattributedstringagent which gets launched by TestWebKitAPI
loads locally built WebKit but then launched WebContent process, networking process, etc... without
setting `__XPC_DYLD_FRAMEWORK_PATH` and `__XPC_DYLD_LIBRARY_PATH`.

Fix the tests by enabling WriteRichTextDataWhenCopyingOrDragging to trigger the legacy behavior.

* Source/WebKit/UIProcess/API/C/WKPreferences.cpp:
(WKPreferencesSetWriteRichTextDataWhenCopyingOrDragging):
(WKPreferencesGetWriteRichTextDataWhenCopyingOrDragging):
* Source/WebKit/UIProcess/API/C/WKPreferencesRefPrivate.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/CopyRTF.mm:
(copyAttributedStringFromHTML):

Canonical link: https://commits.webkit.org/277655@main